@@ -3,6 +3,8 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  FIX: Newly shown columns can now be resized
+  FIX: BR 82020: next/prev buttons disabled when they shouldn't be
   ADD: ToolbarAnalyzer remembers it's framerate, allowed fps: {50, 40, 30, 20}
   ADD: Full streaming audio support for GStreamer engine.
   FIX: Don't allow user to get into a situation where there is no Menu.
